--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "logparse"]
 	path = logparse
 	url = git@github.com:waltersharpWEI/logparse.git
+[submodule "drawplot"]
+	path = drawplot
+	url = git@github.com:waltersharpWEI/drawplot.git
